2007-01-04 07:52:20  Sean Middleditch <elanthis@awesomeplay.com>

  * Include bitset.h.  Oops.

2007-01-04 07:51:44  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed the bitfield from ObjectBlueprint and replaced with
    the new BitSet template type.  This reduced the over-all code
    in the blueprint, and it's just the start of the reduction I
    want to do.

2006-12-27 06:40:05  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove debugging message.  Oops.

2006-12-27 06:37:15  Sean Middleditch <elanthis@awesomeplay.com>

  * Finally stabilized the sorting of entities so that they quit
    bouncing around in the zone files.
  * Began adding a ruleset file.  It's mostly just thoughts,
    and is so far unimplemented.

2006-10-08 08:43:22  Sean Middleditch <elanthis@awesomeplay.com>

  * When a socket is waiting for a disconnect, do not call the flush
    method any further.  (It shouldn't have any new waiting output,
    after all.)  This will fix a rather nasty problem that occurs
    when a telnet session times out from inactivity.
  * Explicitly flush text chunk in telnet code before requesting
    a disconnection.
  * Remove spurious log of event name in AI module.

2006-10-05 03:03:27  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix the network code to use a vector of bytes instead of a
    StringBuffer for output buffering, so that we can use embedded
    NUL bytes again, so that ZMP works.

2006-10-01 07:54:48  Sean Middleditch <elanthis@awesomeplay.com>

  * Show the direction of all exits in room lists.

2006-09-30 06:16:20  Sean Middleditch <elanthis@awesomeplay.com>

  * Don't require a room for events, since events like EnterZone
    for creatures just entering the game have no old room.
  * Added a new AI, monster.ai, which is a very simple "attack
    random player in room" AI.
  * Removed the foodchain stuff from npc.sx.
  * Added an attackRandomPlayer() method in npc.sx.