@@ -1,3 +1,10 @@
+2007-01-06 20:32:00  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Removed the heavy-weight container types code.  Yes, this
+    makes the code a little more fragile and unclean, and I
+    plan on cleaning that up.  It would _so_ be nice if C++ has
+    type-safe enums.
+
 2007-01-04 07:52:20  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Include bitset.h.  Oops.
